No-match cards change color and flip back; add timer and start time

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
         	<span class="moves">0</span> Moves
 
+            <span class="timer">0:00</span> <!-- added this to the Udacity starter code -->
+
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
@@ -66,7 +68,7 @@
             <li class="card">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card"> <!--removed "card open show"-->
+            <li class="card">
                 <i class="fa fa-bolt"></i>
             </li>
             <li class="card">
@@ -84,3 +86,4 @@
     <script src="js/app.js"></script>
 </body>
 </html>
+<!-- removed fa fa-bolt's card open show class provided in Udacity starter code in line 70, but leaving comment in the line broke the functionality, so comment removed as well -->
