Fix timer bugs; add shuffle

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         	<span class="moves">0</span> Moves
 
-            <span class="timer">0:00</span> <!-- added this to the Udacity starter code -->
+            <span class="timer">0 : 00</span> <!-- added this to the Udacity starter code -->
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
