Make restart button clickable; debug shuffle function

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span class="timer">0 : 00</span> <!-- added this to the Udacity starter code -->
 
             <div class="restart">
-        		<i class="fa fa-repeat"></i>
+        		<button type="reset"><i class="fa fa-repeat"></i></button> <!--used method from https://www.w3schools.com/tags/att_button_type.asp -->
         	</div>
         </section>
 
