--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
+
+            <div id="congrats" class="modal"> <!-- added this to the Udacity starter code with help from: https://www.w3schools.com/howto/howto_css_modals.asp -->
+                <div class="modal-content">
+                <p>Modal text goes here</p>
+                </div>        
+            </div>
         </section>
 
         <ul class="deck">
