Added modal; fix modal, fix stars, fix timer, add dynamic modal content

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <section class="score-panel">
         	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        		<id="star1"<li><i class="fa fa-star"></i></li></id="star1">
+        		<id="star2"<li><i class="fa fa-star"></i></li></id="star2">
+        		<id="star3"<li><i class="fa fa-star"></i></li></id="star3">
         	</ul>
 
         	<span class="moves">0</span> Moves
@@ -32,7 +32,11 @@
 
             <div id="congrats" class="modal"> <!-- added this to the Udacity starter code with help from: https://www.w3schools.com/howto/howto_css_modals.asp -->
                 <div class="modal-content">
-                <p>Modal text goes here</p>
+                <p>CONGRATULATIONS! YOU WON!</p>
+                    <p>Game won in X time and Y star rating.</p>
+                    <p>Would you like to play again?</p>
+                        <button type="button">Yes</button>
+                        <button type="button">No</button>
                 </div>        
             </div>
         </section>
