Modal fixed; fix removeStar function and matchedCards

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 
             <div id="congrats" class="modal"> <!-- added this to the Udacity starter code with help from: https://www.w3schools.com/howto/howto_css_modals.asp -->
                 <div class="modal-content">
-                <p>CONGRATULATIONS! YOU WON!</p>
+                <h3>CONGRATULATIONS! *** YOU WON!</h3>
                     <p>Game won in X time and Y star rating.</p>
+                    <br>
                     <p>Would you like to play again?</p>
                         <button type="button">Yes</button>
                         <button type="button">No</button>
