Fix modal button issues; add stars

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -33,7 +33,7 @@
             <div id="congrats" class="modal"> <!-- added this to the Udacity starter code with help from: https://www.w3schools.com/howto/howto_css_modals.asp -->
                 <div class="modal-content">
                 <h3>CONGRATULATIONS! *** YOU WON!</h3>
-                    <p>You finished the game in <span id="endTime"></span> with <span id="endMoves"></span> moves!</p>
+                    <p>You finished the game in <span id="endTime"></span> seconds with <span id="endMoves"></span> moves!</p>
                     <br>
                     <p>Would you like to play again?</p>
                         <div class="buttons">
